--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,9 @@
     <string name="your_mobile_number">Your mobile number</string>
     <string name="login_with">Login with</string>
     <string name="sign_up_with">Sign up with</string>
+    <string name="enter_otp_code">Enter OTP Code</string>
+    <string name="otp_code">OTP Code</string>
+    <string name="requried">Required</string>
+
 
 </resources>
