--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,13 @@
     <string name="sign_up_with">Sign up with</string>
     <string name="enter_otp_code">Enter OTP Code</string>
     <string name="otp_code">OTP Code</string>
+    <string name="invalid_otp">Invalid OTP Code</string>
     <string name="requried">Required</string>
     <string name="invalid">Invalid E-mail</string>
     <string name="invalidMobile">Invalid Mobile Number</string>
+    <string name="didn_t_receive_the_otp">Didn\'t receive the otp?</string>
+    <string name="resend_otp">RESEND OTP</string>
+    <string name="otp_sent">OTP Sent</string>
 
 
 </resources>
